cc: Clear the |layer_id_to_scroll_offset_map_| during ScrollTree deserialization.

This should be cleared when a new property tree is created in the
LayerTreeHost during deserialization but the ScrollTree copy constructor
retains this map.

BUG=603271
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review URL: https://codereview.chromium.org/1886973005

Cr-Commit-Position: refs/heads/master@{#387743}

Former-commit-id: d0b61b1bed0afc451d7bb724ed9f27ec5e7205bc