cc/trees/property_tree.cc
@@ -1462,6 +1462,9 @@ void ScrollTree::FromProtobuf(const proto::PropertyTree& proto) {
 
   currently_scrolling_node_id_ = data.currently_scrolling_node_id();
 
+  // TODO(khushalsagar): This should probably be removed if the copy constructor
+  // for ScrollTree copies the |layer_id_to_scroll_offset_map_| as well.
+  layer_id_to_scroll_offset_map_.clear();
   for (int i = 0; i < data.layer_id_to_scroll_offset_map_size(); ++i) {
     const proto::ScrollOffsetMapEntry entry =
         data.layer_id_to_scroll_offset_map(i);
